writing-a-c-compiler-tests/tests/chapter_9/valid/no_arguments/use_function_in_expression.c
int bar(void) {
    return 9;
}

int foo(void) {
    return 2 * bar();
}

int main(void) {
     
    return foo() + bar() / 3;
}