writing-a-c-compiler-tests/tests/chapter_9/invalid_types/too_many_args.c
int foo(int a) {
    return a + 1;
}

int main(void) {
   
    return foo(1, 2);
}